# src/swagger.json
@@ -5,7 +5,7 @@
     "description": "Valheim Items API",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "localhost:5200",
   "basePath": "/",
   "tags": [
     {
@@ -216,7 +216,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -398,7 +398,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -580,7 +580,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -762,7 +762,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -944,7 +944,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -1126,7 +1126,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -1308,7 +1308,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -1490,7 +1490,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -1672,7 +1672,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -1854,7 +1854,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -2036,7 +2036,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -2218,7 +2218,7 @@
             "in": "path",
             "required": true,
             "type": "string",
-            "enum": ["name", "description"]
+            "enum": ["name", "description", "recipe"]
           },
           {
             "name": "searchTerm",
@@ -2314,263 +2314,72 @@
           "description": {
             "type": "string"
           },
-          "quality1": {
-            "type": "object",
-            "properties": {
-              "recipe": {
-                "type": "string"
-              },
-              "weight": {
-                "type": "number",
-                "format": "double",
-                "example": "0.1"
-              },
-              "durability": {
-                "type": "integer",
-                "format": "int32",
-                "example": "100"
-              },
-              "slash": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "spirit": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "poison": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "chop": {
-                "type": "integer",
-                "format": "int32",
-                "example": "20"
-              },
-              "backstab": {
-                "type": "string",
-                "example": "3x"
-              },
-              "stagger": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "knockback": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "blockForce": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "parryBonus": {
-                "type": "string",
-                "example": "2x"
-              },
-              "movement": {
-                "type": "string",
-                "example": "-5%"
-              }
-            }
-          },
-          "quality2": {
-            "type": "object",
-            "properties": {
-              "recipe": {
-                "type": "string"
-              },
-              "weight": {
-                "type": "number",
-                "format": "double",
-                "example": "0.1"
-              },
-              "durability": {
-                "type": "integer",
-                "format": "int32",
-                "example": "100"
-              },
-              "slash": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "spirit": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "poison": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "chop": {
-                "type": "integer",
-                "format": "int32",
-                "example": "20"
-              },
-              "backstab": {
-                "type": "string",
-                "example": "3x"
-              },
-              "stagger": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "knockback": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "blockForce": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "parryBonus": {
-                "type": "string",
-                "example": "2x"
-              },
-              "movement": {
-                "type": "string",
-                "example": "-5%"
-              }
-            }
-          },
-          "quality3": {
-            "type": "object",
-            "properties": {
-              "recipe": {
-                "type": "string"
-              },
-              "weight": {
-                "type": "number",
-                "format": "double",
-                "example": "0.1"
-              },
-              "durability": {
-                "type": "integer",
-                "format": "int32",
-                "example": "100"
-              },
-              "slash": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "spirit": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "poison": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "chop": {
-                "type": "integer",
-                "format": "int32",
-                "example": "20"
-              },
-              "backstab": {
-                "type": "string",
-                "example": "3x"
-              },
-              "stagger": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "knockback": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "blockForce": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "parryBonus": {
-                "type": "string",
-                "example": "2x"
-              },
-              "movement": {
-                "type": "string",
-                "example": "-5%"
-              }
-            }
-          },
-          "quality4": {
-            "type": "object",
-            "properties": {
-              "recipe": {
-                "type": "string"
-              },
-              "weight": {
-                "type": "number",
-                "format": "double",
-                "example": "0.1"
-              },
-              "durability": {
-                "type": "integer",
-                "format": "int32",
-                "example": "100"
-              },
-              "slash": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "spirit": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "poison": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "chop": {
-                "type": "integer",
-                "format": "int32",
-                "example": "20"
-              },
-              "backstab": {
-                "type": "string",
-                "example": "3x"
-              },
-              "stagger": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "knockback": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "blockForce": {
-                "type": "integer",
-                "format": "int32",
-                "example": "0"
-              },
-              "parryBonus": {
-                "type": "string",
-                "example": "2x"
-              },
-              "movement": {
-                "type": "string",
-                "example": "-5%"
+          "quality": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "quality": { "type": "integer", "format": "int32", "example": "1" },
+                "recipe": {
+                  "type": "string"
+                },
+                "weight": {
+                  "type": "number",
+                  "format": "double",
+                  "example": "0.1"
+                },
+                "durability": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": "100"
+                },
+                "slash": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": "0"
+                },
+                "spirit": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": "0"
+                },
+                "poison": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": "0"
+                },
+                "chop": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": "20"
+                },
+                "backstab": {
+                  "type": "string",
+                  "example": "3x"
+                },
+                "stagger": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": "0"
+                },
+                "knockback": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": "0"
+                },
+                "blockForce": {
+                  "type": "integer",
+                  "format": "int32",
+                  "example": "0"
+                },
+                "parryBonus": {
+                  "type": "string",
+                  "example": "2x"
+                },
+                "movement": {
+                  "type": "string",
+                  "example": "-5%"
+                }
               }
             }
           }
